# exploring-polars

./: README.md  pyproject.toml
src/: 1-getting-started.ipynb  2-main-abstractions.ipynb  3-expressions-contexts.ipynb  getting-started.ipynb
