[tool.poetry]
name = "exploring-polars"
version = "0.1.0"
description = ""
authors = ["Gabriel Fuentes <gafnts@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.33.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.0"
mypy = "^1.18.1"
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
